@@ -11,6 +11,9 @@ Fix rt.cpan.org #122352
 
 	bgsend(): TCP retry can stall for IO::Socket::IP before 0.38
 
+Feature
+	CDS / CDNSKEY: Implement RFC8078 erratum 5049.
+
 
 **** 1.11 Jun 26, 2017
 
